<resources>
    <!-- Global -->
    <string name="app_name">Handsy-Sign-Language-Tutorial</string>
    <string name="simplified_app_name">Handsy</string>
    <string name="complementary_app_name">FSL Tutorial</string>
    <string name="logo_description">Official Logo/Mascot of Handsy</string>
    <string name="title_activity_developers_message_screen">DevelopersMessageScreen</string>
    <!-- Introductory Screen -->
    <string name="introductoryGreetings">HI from</string>
    <string name="askForUserName">What is your name?</string>
    <string name="inputContext">Name</string>
    <string name="devMessage">Handsy Sign Language Tutorial is a mobile application with the purpose of providing an accessible platform for learning the Filipino Sign Language for anyone, but most especially for those who are auditory and hearing impaired.\n \nWe hope you enjoy  using this application </string>
    <string name="introductoryContinueButton">Start Your Journey</string>
    <string name="title_activity_main_screen">mainScreen</string>
    <!-- Main Screen -->
    <string name="lessonButtonString">LESSONS</string>
    <string name="statsButtonString">STATS</string>
    <!-- Lesson -->
    <string name="continueButton">CONTINUE</string>
    <string name="lesson_scrollview_description">Scroll View for the Application Lesson excluding Header</string>
    <string name="default_lesson_content">Default content for the hand sign lesson in text format</string>
    <string name="default_media_content">Default content for the hand sign lesson media format</string>
    <!-- Lesson -->
    <string name="default_first_choice">First Choice</string>
    <string name="default_second_choice">Second Choice</string>
    <string name="default_third_choice">Third Choice</string>
    <string name="default_fourth_choice">Fourth Choice</string>
    <string name="test_check_button">CHECK</string>
    <string name="test_default_answer_context">Input Text</string>
</resources>