<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".introductoryScreen.UserIntroductionScreen">

    <LinearLayout
        android:id="@+id/introductoryHeadingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/greetingsSubText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/celebes_regular"
            android:text="@string/introductoryGreetings"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/greetingsMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/feather_font"
            android:text="@string/simplified_app_name"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="206dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@drawable/mascot_official" />

    <LinearLayout
        android:id="@+id/introductoryNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/celebes_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="10sp"
            android:paddingVertical="10sp"
            android:text="@string/inputContext"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/askUserNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/celebes_regular"
            android:text="@string/askForUserName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>